--- a/YarpJwtSample/GatewayApi/appsettings.json
+++ b/YarpJwtSample/GatewayApi/appsettings.json
@@ -10,6 +10,7 @@
     "routes": {
       "account-api": {
         "clusterId": "account-api",
+        "AuthorizationPolicy": "myPolicy",
         "Match": {
           "Path": "account-api/{**catch-all}"
         },
@@ -21,6 +22,7 @@
       },
       "app-api": {
         "clusterId": "app-api",
+        "AuthorizationPolicy": "myPolicy",
         "Match": {
           "Path": "app-api/{**catch-all}"
         },
