--- a/YarpJwtSample/GatewayApi/appsettings.json
+++ b/YarpJwtSample/GatewayApi/appsettings.json
@@ -10,7 +10,7 @@
     "routes": {
       "account-api": {
         "clusterId": "account-api",
-        "AuthorizationPolicy": "myPolicy",
+        "AuthorizationPolicy": "default",
         "Match": {
           "Path": "account-api/{**catch-all}"
         },
@@ -22,7 +22,7 @@
       },
       "app-api": {
         "clusterId": "app-api",
-        "AuthorizationPolicy": "myPolicy",
+        "AuthorizationPolicy": "default",
         "Match": {
           "Path": "app-api/{**catch-all}"
         },
