--- a/YarpJwtSample/GatewayApi/appsettings.json
+++ b/YarpJwtSample/GatewayApi/appsettings.json
@@ -10,7 +10,7 @@
     "routes": {
       "account-api": {
         "clusterId": "account-api",
-        "AuthorizationPolicy": "default",
+        "AuthorizationPolicy": "myPolicy",
         "Match": {
           "Path": "account-api/{**catch-all}"
         },
