--- a/DddEf/src/DddEf.Application/DddEf.Application.csproj
+++ b/DddEf/src/DddEf.Application/DddEf.Application.csproj
@@ -1,9 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="UseCases\Customers\Commands\" />
+    <Folder Include="UseCases\Products\Commands\" />
+    <Folder Include="UseCases\SalesOrders\Commands\" />
+  </ItemGroup>
 
 </Project>
