--- a/DddEf/src/DddEf.Api/appsettings.json
+++ b/DddEf/src/DddEf.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;Database=DddEfTest01;user id=sa;password=1234;TrustServerCertificate=True;"
+  }, 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
